--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,16 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'com.google.gms.google-services'
+    id 'kotlin-parcelize'
 }
+
+apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
 
 //Para generar un enlace directo entre la vista (xmls) y el código
 android.buildFeatures.viewBinding true
+
+
 
 android {
     compileSdk 32
@@ -45,9 +51,28 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Se agregan para poder utilizar las anotaciones @Entity Lugar y demás
+    annotationProcessor 'androidx.room:room-compiler:2.4.1'
+    kapt "androidx.room:room-compiler:2.4.1"
+    implementation 'androidx.room:room-ktx:2.4.1'
+
+    //Navegación entre fragmentos
+    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.4.0"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.4.0"
+
+    //Para clases más adelante  gps y cámara
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'androidx.camera:camera-camera2:1.0.2'
+
+    //Para clases más adelante usar imágenes y RecyclerView
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'jp.wasabeef:glide-transformations:4.1.0'
 }
