--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
         classpath 'com.google.gms:google-services:4.3.10'
         //Para poder pasar parámetros en la navegación entre fragmentos
-        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.4.0'
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0-alpha01'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,3 +19,8 @@ buildscript {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
+
+
+
