--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lugares">
+  xmlns:tools="http://schemas.android.com/tools"
+  package="com.lugares">
 
 <!-- Este permiso es para hacer una llamada telefónica -->
     <uses-permission android:name="android.permission.CALL_PHONE"/>
@@ -8,6 +9,12 @@
     <!-- Esos permisos permiten la geolocalización -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+  <!-- Permisos para uso de microfono y camara-->
+  <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    tools:ignore="ScopedStorage"/>
+
 
     <application
         android:allowBackup="true"
@@ -30,6 +37,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+      <provider
+        android:name="androidx.core.content.FileProvider"
+        android:authorities="${applicationId}.provider"
+        android:exported="false"
+        android:grantUriPermissions="true">
+        <meta-data
+          android:name="android.support.FILE_PROVIDER_PATHS"
+          android:resource="@xml/file_paths"/>
+      </provider>
+
     </application>
 
 </manifest>
