--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
     //Para clases más adelante usar imágenes y RecyclerView
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
+
+    implementation'com.google.firebase:firebase-storage-ktx'
 }
